# rust-newsletter

./: .env  .env.example  Cargo.toml  docker-compose.yml
migrations/: 20251111233641_create_tables.sql
scripts/: watch.sh
src/: api.rs  auth.rs  config.rs  domain.rs  lib.rs  main.rs  middleware.rs
src/api/: create_topic.rs  list_topics.rs  login.rs  request_otp.rs  subscribe.rs
src/domain/: email.rs  otp.rs  topic.rs  user.rs
tests/: api.rs
