[package]
name = "newsletter"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zerp2prod"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "time"] }
regex = "1.12.2"
hmac = "0.12.1"
sha1 = "0.10.6"
redis = { version = "0.32.5", features = ["tokio-comp"] }
time = { version = "0.3.44", features = ["serde"] }
tower-http = "0.6.6"
rand = "0.9.2"
hex = "0.4.3"
dotenvy = "0.15.7"
